--- a/src/01_tracking_intro/template/config.yml
+++ b/src/01_tracking_intro/template/config.yml
@@ -3,5 +3,5 @@ parameters:
   random_state: 23
   verbosity: -1
 
-tracking_uri: ec2-3-84-114-53.compute-1.amazonaws.com:5000
+tracking_uri: 
 experiment_name: mlflow-tutorial-train
